fixing icons spacing in navbar in mobile view

--- a/src/styles/imports/sidebar.scss
+++ b/src/styles/imports/sidebar.scss
@@ -71,7 +71,7 @@
             justify-content: center;
             align-items: center;
             padding: 0;
-            margin: 0 0 0 3rem;
+            margin: 0 0 0 9rem;
 
             .nav-item {
                 .icon {
@@ -86,6 +86,22 @@
             .nav-item:hover {
                 background: none;
             }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        .nav-list {
+            margin: 0 0 0 5rem;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .sidebar {
+        .nav-list {
+            margin: 0 0 0 2rem;
         }
     }
 }
