--- a/src/styles/imports/top-tracks-card.scss
+++ b/src/styles/imports/top-tracks-card.scss
@@ -81,8 +81,15 @@
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     .top-tracks__elements-container {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 576px) {
+    .top-tracks__elements-container {
+        width: 85%;
+        grid-template-columns: 1fr;
     }
 }
